--- a/styles.css
+++ b/styles.css
@@ -2,36 +2,68 @@
    GLOBAL STYLES
 -------------- */
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+
+body{
+  background-color: #F5F5DC;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+
+
+}
+
+main {
+  flex: 1;
+}
+
+
 h1{
     text-align: center;
-    color: #5c5c93;
-    margin: 30px 0 50px;
+    color: #388E3C;
+    margin: 0;
+
 }
 
 h3{
     text-align: center;
-    color: #5c5c93;
-    margin: 30px 0 50px;
-    margin-bottom: 10px;
+    color: #388E3C;
+    /* margin: 30px 0 50px;
+    margin-bottom: 10px; */
+    
 }
+
+header {    
+    background-color: #fff;
+    margin: 0;
+}
+
 
 /* ------------
   NAVBAR STYLES
 -------------- */
 
-ul {
+.main-nav .nav-list {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #5c5c93;
+  width: 70%;
+  background-color: #388E3C;
+
+  clip-path: polygon(0 0, 100% 0, calc(100% - 35px) 100%, 0 100%);
 }
 
-ul li {
+.main-nav .nav-item {
   float: left;
 }
 
-ul li a {
+.main-nav .nav-link {
   display: block;
   color: white;
   text-align: center;
@@ -39,13 +71,178 @@ ul li a {
   text-decoration: none;
 }
 
-ul li a:hover {
+.main-nav .nav-link:hover {
   background-color: #111111;
 }
+
+
+/* ------------
+  Home and About Style
+-------------- */
+
+/* Header above nav bar */
+.hh1 {
+    text-align: center;
+    color: #388E3C;
+    margin: 0;
+
+    padding: 1%;
+}
+
+.ah1 {
+    margin-top: 2%;
+}
+
+
+/* Home DIV */
+.home {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 4%;
+    text-align: center;
+    color: #388E3C;
+}
+
+/* Home Image */
+.home1 {
+    width: 30%;
+}
+
+
+/* 3 IMAGES */
+* {
+  box-sizing: border-box;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 1;
+  padding: 10px;
+  text-align: center;
+}
+
+.column img {
+  width: 100%;      
+  height: 200px;     
+  object-fit: cover; 
+  border-radius: 8px;
+}
+
+
+
+/* .footer1{
+  background: #222;
+  color: #fff;
+  text-align: center;
+
+
+  margin: 0 auto;
+  padding: 1%;
+} */
+
+.footer1 {
+  background-color: #388E3C;
+  color: white;
+  text-align: center;
+  padding: 1%;
+  width: 100%;
+}
+
+
+/* ------------
+   CONTACT US STYLES
+-------------- */
+
+main.contact-section {
+  width: 90%;         
+  max-width: 800px;    
+  margin: 5% auto;     
+  padding: 3%;         
+  background-color: #fdfdf9;
+  border-radius: 2%;   
+  box-shadow: 0 0.5% 2% rgba(0,0,0,0.1); 
+  font-family: "Segoe UI", Arial, sans-serif;
+  color: #333;
+  box-sizing: border-box; 
+
+  text-align: center;
+}
+
+main.contact-section h2 {
+  text-align: center;
+  color: #388E3C;
+  margin-bottom: 3%;
+  font-size: 2em;
+}
+
+main.contact-section section {
+  margin-bottom: 4%;
+  padding-bottom: 2%;
+  border-bottom: 0.1% solid #ccc;
+}
+
+main.contact-section section:last-child {
+  border-bottom: none;
+}
+
+main.contact-section h3 {
+  color: #2E7D32;
+  margin-bottom: 1%;
+  font-size: 1.3em;
+}
+
+main.contact-section address {
+  font-style: normal;
+  line-height: 1.6;
+  margin-left: 2%;
+}
+
+main.contact-section ul {
+  list-style-type: none !important;
+  padding-left: 0 !important;
+  line-height: 1.8;
+  margin: 0 !important;
+}
+
+main.contact-section li {
+  margin-bottom: 1%;
+}
+
+main.contact-section li strong {
+  color: #388E3C;
+}
+
+main.contact-section a {
+  color: #1B5E20 !important;
+  text-decoration: none !important;
+}
+
+main.contact-section a:hover {
+  text-decoration: underline !important;
+}
+
+main.contact-section p {
+  line-height: 1.6;
+  margin-top: 0;
+  margin-bottom: 2%;
+}
+
+.c1 a {
+    color: #fff;
+}
+
 
 /* ------------
    GALLERY STYLES
 -------------- */
+
+.g1 {
+    margin-top: 2%;
+}
+
 
 .thumbnails{
     margin: 0 auto;
@@ -58,7 +255,7 @@ ul li a:hover {
     padding-top: 2px;
     overflow:hidden;
     position: relative;
-    background-color: rgb(62, 67, 101);
+    background-color: #2E7D32;
 }
 
 
@@ -81,7 +278,7 @@ img {
 }
 
 .galleryDisplay{
-    background-color: #585888;
+    background-color: #388E3C;
     width:80%;
     max-width: 1000px;
     height: auto;
@@ -114,11 +311,6 @@ img {
     color: #333;
 }
 
-.about img {
-    max-width: 100%;
-    border-radius: 10px;
-    margin: 20px 0;
-}
 
 .about p {
     line-height: 1.6;
